--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <li class="description-li">
                     <div class="icon">
                         <svg class="icon-sec-two" width="64" height="64">
-                            <use href="./images/svg/people-office 1.svg"></use>
+                            <use href="./images/icons.svg/people-office 1.svg"></use>
                         </svg>
         </div>
             <h3 class="description-tittle">Strategy</h3>
@@ -65,7 +65,7 @@
             <li class="description-li">
                 <div class="icon">
                     <svg class="icon-sec-two" width="64" height="64">
-                        <use href="./images/svg/antenna.svg"></use>
+                        <use href="./images/icons.svg/antenna.svg"></use>
                     </svg>
                 </div>
                 <h3 class="description-tittle">Punctuality</h3>
@@ -75,7 +75,7 @@
             <li class="description-li">
                 <div class="icon">
                 <svg class="icon-sec-two" width="64" height="64">
-                    <use href="./images/svg/clock.svg"></use>
+                    <use href="./images/icons.svg/clock.svg"></use>
                 </svg>
                 </div>
                 <h3 class="description-tittle">Diligence</h3>
@@ -85,7 +85,7 @@
             <li class="description-li">
                 <div class="icon">
                     <svg class="icon-sec-two" width="64" height="64">
-                        <use href="./images/svg/diagram.svg"></use>
+                        <use href="./images/icons.svg/diagram.svg"></use>
                     </svg>
                 </div>
                 <h3 class="description-tittle">Technologies</h3>
@@ -93,7 +93,7 @@
                 <li class="description-li">
                     <div class="icon">
                         <svg class="icon-sec-two" width="64" height="64">
-                            <use href="./images/svg/cosmonaut.svg"></use>
+                            <use href="./images/icons.svg/cosmonaut.svg"></use>
                         </svg>
                     </div>
             </li>
@@ -115,28 +115,28 @@
                             <li class="social-media-item">
                                 <a href="https://www.instagram.com/" target="_blank" class="link">
                                     <svg class="icon-sec-three" width="16" height="16">
-                                        <use href="./images/svg/instagram.svg"></use>
+                                        <use href="./images/icons.svg/instagram.svg"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-media-item">
                                 <a href="https://www.twitter.com/" target="_blank" class="link">
                                     <svg class="icon-sec-three" width="16" height="16">
-                                        <use href="./images/svg/twitter.svg"></use>
+                                        <use href="./images/icons.svg/twitter.svg"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-media-item">
                                 <a href="https://www.facebook.com/" target="_blank" class="link">
                                 <svg class="icon-sec-three" width="16" height="16">
-                                    <use href="./images/svg/facebook.svg"></use>
+                                    <use href="./images/icons.svg/facebook.svg"></use>
                                 </svg>
                                 </a>
                             </li>
                             <li class="social-media-item">
                                 <a href="https://www.linkedin.com/" target="_blank" class="link">
                                 <svg class="icon-sec-three" width="16" height="16">
-                                    <use href="./images/svg/linkedln.svg"></use>
+                                    <use href="./images/icons.svg/linkedln.svg"></use>
                                 </svg>
                                 </a>
                             </li>
@@ -153,28 +153,28 @@
                         <li class="social-media-item">
                         <a href="https://www.instagram.com/" target="_blank" class="link">
                             <svg class="icon-sec-three" width="16" height="16">
-                            <use href="./images/svg/instagram.svg"></use>
+                            <use href="./images/icons.svg/instagram.svg"></use>
                             </svg>
                         </a>
             </li>
             <li class="social-media-item">
                 <a href="https://www.twitter.com/" target="_blank" class="link">
                     <svg class="icon-sec-three" width="16" height="16">
-                        <use href="./images/svg/twitter.svg"></use>
+                        <use href="./images/icons.svg/twitter.svg"></use>
                     </svg>
                 </a>
             </li>
             <li class="social-media-item">
                 <a href="https://www.facebook.com/" target="_blank" class="link">
                     <svg class="icon-sec-three" width="16" height="16">
-                        <use href="./images/svg/facebook.svg"></use>
+                        <use href="./images/icons.svg/facebook.svg"></use>
                     </svg>
                 </a>
             </li>
             <li class="social-media-item">
                 <a href="https://www.linkedin.com/" target="_blank" class="link">
                     <svg class="icon-sec-three" width="16" height="16">
-                        <use href="./images/svg/linkedln.svg"></use>
+                        <use href="./images/icons.svg/linkedln.svg"></use>
                     </svg>
                 </a>
             </li>
@@ -190,28 +190,28 @@
                         <li class="social-media-item">
                             <a href="https://www.instagram.com/" target="_blank" class="link">
                             <svg class="icon-sec-three" width="16" height="16">
-                                <use href="./images/svg/instagram.svg"></use>
+                                <use href="./images/icons.svg/instagram.svg"></use>
                             </svg>
                             </a>
                         </li>
                         <li class="social-media-item">
                             <a href="https://www.twitter.com/" target="_blank" class="link">
                             <svg class="icon-sec-three" width="16" height="16">
-                                <use href="./images/svg/twitter.svg"></use>
+                                <use href="./images/icons.svg/twitter.svg"></use>
                             </svg>
                             </a>
                         </li>
                         <li class="social-media-item">
                             <a href="https://www.facebook.com/" target="_blank" class="link">
                             <svg class="icon-sec-three" width="16" height="16">
-                                <use href="./images/svg/facebook.svg"></use>
+                                <use href="./images/icons.svg/facebook.svg"></use>
                             </svg>
                             </a>
                         </li>
                         <li class="social-media-item">
                             <a href="https://www.linkedin.com/" target="_blank" class="link">
                             <svg class="icon-sec-three" width="16" height="16">
-                                <use href="./images/svg/linkedln.svg"></use>
+                                <use href="./images/icons.svg/linkedln.svg"></use>
                             </svg>
                             </a>
                         </li>
@@ -227,28 +227,28 @@
                         <li class="social-media-item">
                             <a href="https://www.instagram.com/" target="_blank" class="link">
                             <svg class="icon-sec-three" width="16" height="16">
-                                <use href="./images/svg/instagram.svg"></use>
+                                <use href="./images/icons.svg/instagram.svg"></use>
                             </svg>
                             </a>
                         </li>
                         <li class="social-media-item">
                             <a href="https://www.twitter.com/" target="_blank" class="link">
                             <svg class="icon-sec-three" width="16" height="16">
-                                <use href="./images/svg/twitter.svg"></use>
+                                <use href="./images/icons.svg/twitter.svg"></use>
                             </svg>
                             </a>
                         </li>
                         <li class="social-media-item">
                             <a href="https://www.facebook.com/" target="_blank" class="link">
                             <svg class="icon-sec-three" width="16" height="16">
-                                <use href="./images/svg/facebook.svg"></use>
+                                <use href="./images/icons.svg/facebook.svg"></use>
                             </svg>
                             </a>
                         </li>
                         <li class="social-media-item">
                             <a href="https://www.linkedin.com/" target="_blank" class="link">
                             <svg class="icon-sec-three" width="16" height="16">
-                                <use href="./images/svg/linkedln.svg"></use>
+                                <use href="./images/icons.svg/linkedln.svg"></use>
                             </svg>
                             </a>
                         </li>
@@ -341,28 +341,28 @@
                     <li class="social-link-li">
                         <a href="https://www.instagram.com/" target="_blank" class="linka">
                         <svg class="icon-sec-footer" width="24" height="24">
-                            <use href="./images/svg/instagram.svg"></use>
+                            <use href="./images/icons.svg/instagram.svg"></use>
                         </svg>
                 </a>
             </li>
             <li class="social-link-li">
                 <a href="https://www.twitter.com/" target="_blank" class="linka">
                     <svg class="icon-sec-footer" width="24" height="24">
-                        <use href="./images/svg/twitter.svg"></use>
+                        <use href="./images/icons.svg/twitter.svg"></use>
                     </svg>
                 </a>
             </li>
             <li class="social-link-li">
                 <a href="https://www.facebook.com/" target="_blank" class="linka">
                     <svg class="icon-sec-footer" width="24" height="24">
-                        <use href="./images/svg/facebook.svg"></use>
+                        <use href="./images/icons.svg/facebook.svg"></use>
                     </svg>
                 </a>
             </li>
             <li class="social-link-li">
                 <a href="https://www.linkedin.com/" target="_blank" class="linka">
                     <svg class="icon-sec-footer" width="24" height="24">
-                        <use href="./images/svg/linkedln.svg"></use>
+                        <use href="./images/icons.svg/linkedln.svg"></use>
                     </svg>
                 </a>
             </li>
